--- a/ProyectoEnvios.App.Presentacion/Pages/Tabs/Inicio.cshtml
+++ b/ProyectoEnvios.App.Presentacion/Pages/Tabs/Inicio.cshtml
@@ -1,43 +1,17 @@
-@page
-@model InicioModel
+﻿@page
+@model ProyectoEnvios.App.Presentacion.Pages.InicioModel
 @{
-    ViewData["Title"] = "Inicio";
 }
 
-<h1>@ViewData["Title"]</h1>
-<strong>Acá va toda la parte de Inicio (Info de Cliente/Envío).</strong>
-
-<form>
-    <label for="nombreCliente">Nombre:</label>
-    <input type="text" id="nombreCliente" name="nombreCliente"><br>
-    <label for="apellidoCliente">Apellido:</label>
-    <input type="text" id="apellidoCliente" name="apellidoCliente"><br>
-    <input type="text" id="tipoDocumento" name="tipoDocumento">
-    <select name="tipoDocumento" id="tipoDocumento">
-        <option value="Pasaporte">Pasaporte</option>
-        <option value="PEP">PEP</option>
-        <option value="Cédula de Ciudadania">Cédula de Ciudadania</option>
-        <option value="Residencia">Residencia</option>
-  </select><br>
-    <label for="numDocumento">Número de Documento:</label>
-    <input type="text" id="numDocumento" name="numDocumento"><br>
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion"><br>
-    <label for="telefono">Número de teléfono:</label>
-    <input type="text" id="telefono" name="telefono"><br>
-    <label for="email">Email:</label>
-    <input type="text" id="email" name="email"><br><br>
-    <input type="submit" value="Guardar">
-</form>
 <form>
   <div class="form-group row">
-    <label for="nombreCliente" class="col-sm-2 col-form-label">Nombre del Cliente</label>
+    <label for="nombreCliente" class="col-sm-2 col-form-label">Nombre del Cliente</label><br>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="nombreCliente" placeholder="Nombre">
     </div>
   </div>
   <div class="form-group row">
-    <label for="apellidoCliente" class="col-sm-2 col-form-label">Apellido del Cliente</label>
+    <label for="apellidoCliente" class="col-sm-2 col-form-label">Apellido del Cliente</label><br>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="apellidoCliente" placeholder="Apellido">
     </div>
