Formulario Info. Cliente terminado

--- a/ProyectoEnvios.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/ProyectoEnvios.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -11,11 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-<<<<<<< HEAD
-                <a class="navbar-brand" asp-area="" asp-page="/Index">ProyectoEnvios.App.Presentacion</a>
-=======
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Proyecto Mensajería</a>
->>>>>>> 021e8cb04d45284e017143da75d37f7e3c5f208d
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,11 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-<<<<<<< HEAD
                             <a class="nav-link text-dark" asp-area="" asp-page="/Tabs/Inicio">Inicio</a>
-=======
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Clientes/List">Clientes</a>
->>>>>>> 021e8cb04d45284e017143da75d37f7e3c5f208d
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
