--- a/ProyectoEnvios.App.Presentacion/Pages/Tabs/Inicio.cshtml
+++ b/ProyectoEnvios.App.Presentacion/Pages/Tabs/Inicio.cshtml
@@ -4,68 +4,52 @@
 }
 
 <form>
-  <div class="form-group row">
-    <label for="nombreCliente" class="col-sm-2 col-form-label">Nombre del Cliente</label><br>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="nombreCliente" placeholder="Nombre">
+  <h2>Datos del cliente</h2><br>
+  <div class="form-row">
+    <div class="col">
+      <label for="clienteNombre">Nombre</label>
+      <input type="text" class="form-control" placeholder="Digite nombre del cliente">
     </div>
-  </div>
-  <div class="form-group row">
-    <label for="apellidoCliente" class="col-sm-2 col-form-label">Apellido del Cliente</label><br>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="apellidoCliente" placeholder="Apellido">
+    <div class="col">
+      <label for="clienteApellidos">Apellidos</label>
+      <input type="text" class="form-control" placeholder="Digite apellidos del cliente">
     </div>
-    <div class="form-group col-md-4">
-      <label for="tipoDocumento">Tipo de Documento</label>
-      <select id="tipoDocumento" class="form-control">
-        <option selected>Seleccione...</option>
-        <option value="cedulaCiudadania">Cédula de Ciudadania</option>
-        <option value="pasaporte">Pasaporte</option>
+  </div><br>
+  <div class="form-row">
+    <div class="col">
+      <label for="Tipo de documento">Tipo de documento</label>
+      <select class="custom-select mr-sm-2" id="tipoDocumento">
+        <option selected>Seleccione tipo de documento...</option>
+        <option value="cedulaCiudadania">Cédula de ciudadania</option>
+        <option value="cedulaExtranjeria">Cédula de extranjería</option>
+        <option value="Pasaporte">Pasaporte</option>
+        <option value="nit">NIT</option>
         <option value="pep">PEP</option>
       </select>
-      <label for="numeroDocumento" class="col-sm-2 col-form-label">Número de Documento</label>
-      <input type="text" class="form-control" id="numeroDocumento" placeholder="Número de Documento">
+    </div>
+    <div class="col">
+      <label for="numeroDocumento">Número del documento</label>
+      <input type="text" class="form-control" placeholder="Digite número del documento">
+    </div>
+  </div><br>
+  <div class="form-group">
+    <div>
+      <label for="direccionCliente">Dirección</label>
+      <input type="text" class="form-control" placeholder="Digite dirección del cliente">
     </div>
   </div>
-  <fieldset class="form-group">
-    <div class="row">
-      <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-          <label class="form-check-label" for="gridRadios1">
-            First radio
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-          <label class="form-check-label" for="gridRadios2">
-            Second radio
-          </label>
-        </div>
-        <div class="form-check disabled">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-          <label class="form-check-label" for="gridRadios3">
-            Third disabled radio
-          </label>
-        </div>
-      </div>
+  <div class="form-row">
+    <div class="col">
+      <label for="emailCliente">Email</label>
+      <input type="text" class="form-control" placeholder="Digite email completo del cliente">
     </div>
-  </fieldset>
-  <div class="form-group row">
-    <div class="col-sm-2">Checkbox</div>
-    <div class="col-sm-10">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck1">
-        <label class="form-check-label" for="gridCheck1">
-          Example checkbox
-        </label>
-      </div>
+    <div class="col">
+      <label for="telefonoCliente">Número de teléfono</label>
+      <input type="text" class="form-control" placeholder="Digite número de teléfono del cliente">
     </div>
+  </div><br>
+  <div class="alert alert-dark" role="alert">
+    ¡Click en el botón "Guardar" para guardar información del cliente!
   </div>
-  <div class="form-group row">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary">Sign in</button>
-    </div>
-  </div>
+  <button type="button" class="btn btn-primary">Guardar</button>
 </form>
